tests/ui/error-codes/E0263.stderr
error[E0403]: the name `'a` is already used for a generic parameter in this item's generic parameters
  --> $DIR/E0263.rs:1:16
   |
LL | fn foo<'a, 'b, 'a>(x: &'a str, y: &'b str) {
   |        --      ^^ already used
   |        |
   |        first use of `'a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0403`.
